--- a/force-app/main/default/classes/ShareModalController.cls
+++ b/force-app/main/default/classes/ShareModalController.cls
@@ -7,17 +7,14 @@ public without sharing class ShareModalController {
     public static void sendEmail(String whatId, String fromId, String email, String emailType) {
         try {
             if (fromId == null) fromId = CommunityService.getUserContact().Id;
-            if (emailType == 'SOCIAL_SHARING') {
+
+            Id sourceId = whatId;
+            if (sourceId.getSobjectType() == Participant_Enrollment__c.getSObjectType()) {
+                SendEmailTemplate.sendShareEmail(whatId, fromId, email, 'Share_Study_From_PE_Template');
+            } else if (sourceId.getSobjectType() == HCP_Enrollment__c.getSObjectType()) {
+                SendEmailTemplate.sendShareEmail(whatId, fromId, email, 'Share_Study_From_HCPE_Template');
+            } else if(sourceId.getSobjectType() == Clinical_Trial_Profile__c.getSObjectType()){
                 SendEmailTemplate.sendShareEmail(whatId, fromId, email, 'Share_Social_Study_Template');
-            } else {
-                Id sourceId = whatId;
-                if(sourceId.getSobjectType() == Participant_Enrollment__c.getSObjectType()){
-                    SendEmailTemplate.sendShareEmail(whatId, fromId, email, 'Share_Study_From_PE_Template');
-                }else if(sourceId.getSobjectType() == HCP_Enrollment__c.getSObjectType()){
-                    SendEmailTemplate.sendShareEmail(whatId, fromId, email, 'Share_Study_From_HCPE_Template');
-                }else{
-                    SendEmailTemplate.sendShareEmail(whatId, fromId, email, null);
-                }
             }
 
         } catch (Exception e) {
