--- a/force-app/main/default/classes/StudyActionsPI.cls
+++ b/force-app/main/default/classes/StudyActionsPI.cls
@@ -250,7 +250,7 @@ public class StudyActionsPI extends StudyActions{
         //init study item actions list
         studySitePiActions.add(actions.get(ACT_MANAGE_REFERRALS_BY_SS));
         studySitePiActions.add(actions.get(ACT_MANAGE_REFERRING_CLINICS_BY_SS));
-
+        System.debug('ADD Patient>>>'+actions.get(ACT_ADD_PATIENT));
         if(manageReferralsStatuses.contains(studySite.Override_PI_Referral_Status__c)){
             studyListViewItemActions.add(actions.get(ACT_MANAGE_REFERRALS));
             studyListViewItemActions.add(actions.get(ACT_MANAGE_REFERRING_CLINICS));
@@ -266,9 +266,9 @@ public class StudyActionsPI extends StudyActions{
         if(studySite.Override_PI_Referral_Status__c == StudySiteService.PI_S_INVITATION_SENT){
             studyListViewItemActions.add(actions.get(ACT_NO_THANKS));
         }
-        if(!actions.get(ACT_ADD_PATIENT).disabled) studyListViewItemActions.add(actions.get(ACT_ADD_PATIENT));
-        
-            //prepare bottom bar actions:
+        if(!actions.get(ACT_ADD_PATIENT).disabled)studyListViewItemActions.add(actions.get(ACT_ADD_PATIENT));
+
+        //prepare bottom bar actions:
         if(openToReceiveReferralsStatuses.contains(studySite.Override_PI_Referral_Status__c)){
             if(isTCAcceptanceRequired){
                 studyDetailBottomBarActions.add(actions.get(ACT_VIEW_TC));
