--- a/force-app/main/default/classes/StudyListViewController.cls
+++ b/force-app/main/default/classes/StudyListViewController.cls
@@ -4,7 +4,7 @@
 
 public without sharing class StudyListViewController {
 
-    private static final String DUMMY_ACCOUNT_NAME='Dummy Account For Location Check';
+    private static final String DUMMY_ACCOUNT_NAME = 'Dummy Account For Location Check';
 
     class StudiesGroup {
         String name;
@@ -23,11 +23,12 @@ public without sharing class StudyListViewController {
         List<ParticipantItem> peList = new List<ParticipantItem>();
         List<ParticipantItem> peListNoLongerRecr = new List<ParticipantItem>();
         List<Account> contactAccounts = new List<Account>();
-        List<LabelValueItem> delegatePicklist = new List<LabelValueItem>();
-        List<LabelValueItem> countries = new List<LabelValueItem>{new LabelValueItem('None',null)};
+        List<LabelValueItem> countries = new List<LabelValueItem>{
+                new LabelValueItem('None', null)
+        };
         Map<String, List<LabelValueItem>> statesByCountryMap;
-        Map<String,String> countriesMap;
-        Map<String,String> countryCodesMap;
+        Map<String, String> countriesMap;
+        Map<String, String> countryCodesMap;
     }
 
     @TestVisible
@@ -51,8 +52,6 @@ public without sharing class StudyListViewController {
             } else if (userMode == CommunityService.USER_MODE_PI) {
                 studies = getStudiesForPI();
                 groupTrials(initData, studies, userMode);
-                initData.delegatePicklist = StudyTrialService.getDelegatePicklistValues();
-                initData.contactAccounts = getPIAccounts(studies);
                 initData.countries.addAll(CountryStateUtil.getCountries());
                 initData.statesByCountryMap = CountryStateUtil.getStatesByCountryMap();
                 initData.countriesMap = CountryStateUtil.COUNTRY_MAP;
@@ -137,7 +136,9 @@ public without sharing class StudyListViewController {
     public static List<StudyDetailItem> getStudiesForPI() {
         // prepare map trialId -> StudySite
         Map<Id, List<Study_Site__c>> trialStudySiteMap = new Map<Id, List<Study_Site__c>>();
-        for (Study_Site__c studySite : StudySiteService.getStudySitesForPI()) {
+        List<Study_Site__c> piStudySites = StudySiteService.getStudySitesForPI();
+        Map<Id,Map<Id,Account>> piAccounts = getPiAccounts(piStudySites);
+        for (Study_Site__c studySite : piStudySites) {
             if (!trialStudySiteMap.keySet().contains(studySite.Clinical_Trial_Profile__c)) {
                 trialStudySiteMap.put(studySite.Clinical_Trial_Profile__c, new List<Study_Site__c>{
                         studySite
@@ -146,6 +147,7 @@ public without sharing class StudyListViewController {
                 trialStudySiteMap.get(studySite.Clinical_Trial_Profile__c).add(studySite);
             }
         }
+        Map<String, List<Site_Staff__c>> delegatesMap = getDelegates(trialStudySiteMap.keySet());
         // get trials and TC:
         List<Clinical_Trial_Profile__c> trials = StudyTrialService.getTrials(trialStudySiteMap.keySet());
         Map<Id, Boolean> termsAcceptedMap;
@@ -156,28 +158,29 @@ public without sharing class StudyListViewController {
             List<Study_Site__c> ss = trialStudySiteMap.get(trial.Id);
             StudyDetailItem studyDetailItem = new StudyDetailItem();
             studyDetailItem.trial = trial;
+            studyDetailItem.delegatePicklist = getDelegatePickList(delegatesMap.get(trial.Id));
             Study_Site__c initionSS = new Study_Site__c();
-            Map<String,Study_Site__c> statusMap = new Map<String,Study_Site__c>();
-            for (Integer i = 0; i <ss.size() ; i++) {
-                studyDetailItem.ssList.add(new StudyDetailItem.StudySiteWithActions(ss[i],new StudyActionsPI(ss[i]).studySitePiActions));
-                if(ss[i].Override_PI_Referral_Status__c == StudySiteService.PI_S_INVITATION_SENT){
-                    statusMap.put(StudySiteService.PI_S_INVITATION_SENT,ss[i]);
-                } else if (ss[i].Override_PI_Referral_Status__c == StudySiteService.PI_S_DECLINED_ACCEPTANCE || ss[i].Override_PI_Referral_Status__c == StudySiteService.PI_S_NON_RESPONCIVE_A){
-                    statusMap.put(StudySiteService.PI_S_DECLINED_ACCEPTANCE,ss[i]);
-                } else if(ss[i].Override_PI_Referral_Status__c == StudySiteService.PI_S_DEACTIVATED_A){
-                    statusMap.put(StudySiteService.PI_S_DEACTIVATED_A,ss[i]);
-                }
-                else{
-                    statusMap.put(StudySiteService.PI_S_ACCEPTED,ss[i]);
+            Map<String, Study_Site__c> statusMap = new Map<String, Study_Site__c>();
+            for (Integer i = 0; i < ss.size(); i++) {
+                StudyActionsPI act = new StudyActionsPI(ss[i]);
+                studyDetailItem.ssList.add(new StudyDetailItem.StudySiteWithActions(ss[i], act.studySitePiActions, piAccounts.get(ss[i].Principal_Investigator__c).values()));
+                if (ss[i].Override_PI_Referral_Status__c == StudySiteService.PI_S_INVITATION_SENT) {
+                    statusMap.put(StudySiteService.PI_S_INVITATION_SENT, ss[i]);
+                } else if (ss[i].Override_PI_Referral_Status__c == StudySiteService.PI_S_DECLINED_ACCEPTANCE || ss[i].Override_PI_Referral_Status__c == StudySiteService.PI_S_NON_RESPONCIVE_A) {
+                    statusMap.put(StudySiteService.PI_S_DECLINED_ACCEPTANCE, ss[i]);
+                } else if (ss[i].Override_PI_Referral_Status__c == StudySiteService.PI_S_DEACTIVATED_A) {
+                    statusMap.put(StudySiteService.PI_S_DEACTIVATED_A, ss[i]);
+                } else {
+                    statusMap.put(StudySiteService.PI_S_ACCEPTED, ss[i]);
                 }
             }
-            if(statusMap.containsKey(StudySiteService.PI_S_INVITATION_SENT)){
+            if (statusMap.containsKey(StudySiteService.PI_S_INVITATION_SENT)) {
                 initionSS = statusMap.get(StudySiteService.PI_S_INVITATION_SENT);
-            } else if(statusMap.containsKey(StudySiteService.PI_S_DECLINED_ACCEPTANCE)){
+            } else if (statusMap.containsKey(StudySiteService.PI_S_DECLINED_ACCEPTANCE)) {
                 initionSS = statusMap.get(StudySiteService.PI_S_DECLINED_ACCEPTANCE);
-            } else if (statusMap.size() == 1 && statusMap.containsKey(StudySiteService.PI_S_DEACTIVATED_A)){
+            } else if (statusMap.size() == 1 && statusMap.containsKey(StudySiteService.PI_S_DEACTIVATED_A)) {
                 initionSS = statusMap.get(StudySiteService.PI_S_DEACTIVATED_A);
-            } else{
+            } else {
                 initionSS = statusMap.get(StudySiteService.PI_S_ACCEPTED);
             }
             studyDetailItem.studyActions = new StudyActionsPI(initionSS).studyListViewItemActions;
@@ -206,7 +209,7 @@ public without sharing class StudyListViewController {
         StudyDetailItem.sortType = 'Name';
         initData.currentlyRecruitingTrials.sort();
         initData.trialsNoLongerRecruiting.sort();
-         /*if (item.studyStatus.startsWith('Activated') || item.studyStatus.startsWith('Accepted')) {
+        /*if (item.studyStatus.startsWith('Activated') || item.studyStatus.startsWith('Accepted')) {
                 activated.studies.add(item);
             } else if (item.studyStatus == StudySiteService.PI_S_INVITATION_SENT) {
                 pendingYourAction.studies.add(item);
@@ -276,22 +279,118 @@ public without sharing class StudyListViewController {
 
     @AuraEnabled
     public static void checkAccountGeolocation(String account) {
-           Account newAccount = (Account) JSON.deserialize(account,Account.class);
-                Account accForCheck = new Account(Name = DUMMY_ACCOUNT_NAME + ' ' + UserInfo.getUserId(),
-                        BillingStreet = newAccount.BillingStreet,
-                        BillingCountry = newAccount.BillingCountry,
-                        BillingCity = newAccount.BillingCity);
-                insert accForCheck;
+        Account newAccount = (Account) JSON.deserialize(account, Account.class);
+        Account accForCheck = new Account(Name = DUMMY_ACCOUNT_NAME + ' ' + UserInfo.getUserId(),
+                BillingStreet = newAccount.BillingStreet,
+                BillingCountry = newAccount.BillingCountry,
+                BillingCity = newAccount.BillingCity);
+        insert accForCheck;
     }
 
     @AuraEnabled
-    public static String returnAndRemoveAccount(){
-        List<Account> acc = [SELECT Id,Name,BillingLongitude,BillingCity,BillingLatitude FROM Account WHERE Name =: DUMMY_ACCOUNT_NAME + ' ' + UserInfo.getUserId()];
+    public static String returnAndRemoveAccount() {
+        List<Account> acc = [SELECT Id,Name,BillingLongitude,BillingCity,BillingLatitude FROM Account WHERE Name = :DUMMY_ACCOUNT_NAME + ' ' + UserInfo.getUserId()];
         String valueToReturn;
-        if(acc.size()>0) {
+        if (acc.size() > 0) {
             valueToReturn = JSON.serialize(acc[0]);
             delete acc;
         }
         return valueToReturn;
+    }
+
+
+    private static Map<String, List<Site_Staff__c>> getDelegates(Set<Id> triaIds) {
+        Map<String, List<Site_Staff__c>> delegatesMap = new Map<String, List<Site_Staff__c>>();
+        for (Site_Staff__c ss : [
+                SELECT Id,
+                        Study_Site__r.Principal_Investigator__c,
+                        Study_Site__r.Clinical_Trial_Profile__c,
+                        Site_Contact__r.Name,
+                        Site_Contact__c
+                FROM Site_Staff__c
+                WHERE Study_Site__r.Clinical_Trial_Profile__c IN :triaIds
+        ]) {
+            if (delegatesMap.containsKey(ss.Study_Site__r.Principal_Investigator__c)) {
+                delegatesMap.get(ss.Study_Site__r.Clinical_Trial_Profile__c).add(ss);
+            } else {
+                delegatesMap.put(ss.Study_Site__r.Clinical_Trial_Profile__c, new List<Site_Staff__c>{
+                        ss
+                });
+            }
+        }
+        return delegatesMap;
+    }
+
+    private static List<LabelValueItem> getDelegatePickList(List<Site_Staff__c> ss) {
+        Map<Id, LabelValueItem> delegates = new Map<Id, LabelValueItem>();
+        try {
+            if (!ss.isEmpty()) {
+                for (Site_Staff__c delegatesSites : ss) {
+                    delegates.put(delegatesSites.Site_Contact__c, new LabelValueItem(delegatesSites.Site_Contact__r.Name, delegatesSites.Id));
+                }
+            }
+            List<LabelValueItem> labelList = new List<LabelValueItem>();
+            if (!delegates.isEmpty()) {
+                labelList.add(new LabelValueItem('None', ' '));
+                labelList.addAll(delegates.values());
+            }
+            return labelList;
+        } catch (Exception ex) {
+            return null;
+        }
+    }
+
+    private static Map<Id,Map<Id,Account>> getPiAccounts(List<Study_Site__c> studies) {
+        Set<Id> piIds = new Set<Id>();
+        for (Integer i = 0; i <studies.size() ; i++) {
+            piIds.add(studies[i].Principal_Investigator__c);
+        }
+        try {
+            Map<Id, Map<Id,Account>> accountMap = new Map<Id, Map<Id,Account>>();
+            if(!piIds.isEmpty()) {
+                for (AccountContactRelation piAccounts : [
+                        SELECT Id,
+                                Contact.Id,
+                                Contact.Name,
+                                Contact.primaryContact__c,
+                                Account.Id,
+                                Account.Name,
+                                Account.ParentId,
+                                Account.BillingCountry,
+                                Account.BillingCity,
+                                Account.BillingStreet,
+                                Account.BillingPostalCode,
+                                Account.BillingState,
+                                Account.BillingStateCode,
+                                Account.BillingLatitude,
+                                Account.BillingLongitude,
+                                Account.Driving_Directions__c,
+                                Account.Parking_Instructions__c
+                        FROM AccountContactRelation
+                        WHERE ContactId IN :piIds
+                ]) {
+                    if (accountMap.containsKey(piAccounts.Contact.Id)) {
+                        accountMap.get(piAccounts.Contact.Id).put(piAccounts.Account.Id,piAccounts.Account);
+                    } else {
+                        accountMap.put(piAccounts.Contact.Id, new Map<Id, Account>{piAccounts.Account.Id => piAccounts.Account});
+                    }
+                }
+
+                for (Integer i = 0; i < studies.size(); i++) {
+                    if (!studies[i].Account_Was_Changed__c) {
+                        if (accountMap.containsKey(studies[i].Principal_Investigator__c)) {
+                            Map<Id, Account> accMap = accountMap.get(studies[i].Principal_Investigator__c);
+                                accMap.put(studies[i].Site__c,studies[i].Site__r);
+                        } else {
+                            accountMap.put(studies[i].Principal_Investigator__c, new Map<Id, Account>{
+                                    studies[i].Site__c =>  studies[i].Site__r});
+                        }
+                    }
+                }
+            }
+            return accountMap;
+        } catch (Exception ex) {
+            return null;
+        }
     }
 }
